[tool]
[tool.pdm]

[project]
name = "sparco_pay"
version = "0.1.0"
description = "Sparco payment gateway client for python"
authors = [
    {name = "Douglas Harrington Muhone", email = "doug@dhmgroup.net"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
